@@ -1,0 +1,16 @@
+<!DOCTYPE busconfig PUBLIC
+ "-//freedesktop//DTD D-BUS Bus Configuration 1.0//EN"
+ "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
+<busconfig>
+
+  <!-- This configuration file specifies the required security policies
+       for synce-hal to work. -->
+
+  <!-- Allow anyone to invoke methods on the Synce interface -->
+  <policy context="default">
+    <allow send_destination="org.freedesktop.Hal"
+	   send_interface="org.freedesktop.Hal.Device.Synce"/>
+
+  </policy>
+
+</busconfig>
